Update DatabaseProxyTest.java